--- a/jom-api/pom.xml
+++ b/jom-api/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  - Copyright 2013-2025 consulo.io
+  - Copyright 2013-2026 consulo.io
   -
   - Licensed under the Apache License, Version 2.0 (the "License");
   - you may not use this file except in compliance with the License.
@@ -17,13 +17,17 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>consulo</groupId>
-        <artifactId>arch.managment</artifactId>
+        <artifactId>arch.ide-api-provided</artifactId>
         <version>3-SNAPSHOT</version>
         <relativePath/>
     </parent>
+
+    <groupId>consulo.plugin</groupId>
+    <artifactId>consulo.json.jom.api</artifactId>
+    <version>3-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <repositories>
         <repository>
@@ -36,14 +40,11 @@
         </repository>
     </repositories>
 
-    <groupId>consulo.plugin</groupId>
-    <artifactId>consulo.json.parent</artifactId>
-    <version>3-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>api</module>
-        <module>jom-api</module>
-        <module>plugin</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>consulo.json.api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
