--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>consulo.json.api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>consulo.json.jom.api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
